<resources>
    <string name="app_name">ZelDa</string>
    <string name="scoreboard">scoreboard</string>
    <string name="play">play</string>
    <string name="zelda_logo">ZelDa Logo</string>
    <string name="exit">exit</string>
    <string name="score">SCORE:</string>
    <string name="player_logo">Player logo</string>
    <string name="tap_to_start">TAP TO START…</string>
    <string name="game_over_title">Game over Title</string>
    <string name="game_over">Game Over</string>
    <string name="restart">Restart</string>
    <string name="block">block</string>
    <string name="heart">Heart</string>
    <string name="best_scores">BEST SCORES</string>
    <string name="menu">menu</string>
    <string name="firsttrophy">firstTrophy</string>
    <string name="secondtrophy">secondTrophy</string>
    <string name="thirdtrophy">thirdTrophy</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
