<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOverActivity">

    <TextView
        android:id="@+id/game_over_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/game_over_title"
        android:text="@string/game_over"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/game_over_title"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/result"
        android:layout_centerHorizontal="true"
        android:text="@string/restart" />

    <Button
        android:id="@+id/scoreboardBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/resetBtn"
        android:layout_centerHorizontal="true"
        android:text="@string/scoreboard" />


</RelativeLayout>